<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/rlMenu"
        android:visibility="visible"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llDelete"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivDelete"
                    android:src="@drawable/ic_delete"
                    android:backgroundTint="@color/colorAccent"
                    app:tint="@color/colorAccent"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="@string/delete"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llShare"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivShare"
                    android:background="@drawable/ic_share"
                    android:backgroundTint="@color/textColorPrimary"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="@string/share"
                    android:textColor="@color/textColorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llCloudShare"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivCloudShare"
                    android:background="@drawable/ic_baseline_cloud_circle"
                    android:backgroundTint="@color/textColorPrimary"
                    android:layout_width="30dp"
                    android:layout_height="30dp"  />
                <TextView
                    android:text="@string/cloud_share"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llInfo"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivInfo"
                    android:background="@drawable/ic_error_outline"
                    android:backgroundTint="@color/textColorPrimary"
                    android:rotation="180"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="@string/info"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>