<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--<com.heroescape.heroescapelib.ui.widget.PinchImageView-->
        <!--android:id="@+id/pivPhoto"-->
        <!--android:src="@mipmap/dog"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

    <!--</com.heroescape.heroescapelib.ui.widget.PinchImageView>-->

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpPhotoPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>
    <LinearLayout
        android:id="@+id/llHeader"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/states_bar_height"
        android:layout_height="@dimen/nav_bar_height">
        <ImageView
            android:src="@drawable/ic_chevron_left"
            android:onClick="back"
            android:layout_width="40dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlFileOperation"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlMenu"
        android:visibility="gone"
        android:background="@drawable/corner_board_solid_background"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llDelete"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivDelete"
                    android:src="@drawable/ic_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="@string/delete"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llShare"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivShare"
                    android:src="@drawable/ic_share"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="@string/share"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llInfo"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivInfo"
                    android:src="@drawable/ic_error_outline"
                    android:rotation="180"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="@string/info"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>